--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="BTSbot"
+  agent-id="12fd23f9-05be-454a-8cab-21b64fd590f3"
+  language-code="ko"
+></df-messenger>
+    
+    
+    
     <meta charset="UTF-8">
 
 {% seo %}
